--- a/PHPSRePS/MainView.resx
+++ b/PHPSRePS/MainView.resx
@@ -178,4 +178,7 @@
         YII=
 </value>
   </data>
+  <metadata name="descriptText.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
 </root>
