--- a/PHPSRePS/Properties/Resources.resx
+++ b/PHPSRePS/Properties/Resources.resx
@@ -121,6 +121,12 @@
   <data name="Reports" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>GUI Resources\Sidebar\Reports.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Search Icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>GUI Resources\Home View\Search Icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Reports1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>GUI Resources\Sidebar\Reports.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="Home" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>GUI Resources\Sidebar\Home.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -136,7 +142,7 @@
   <data name="Power Icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>GUI Resources\Home View\Power Icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Search Icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>GUI Resources\Home View\Search Icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Forecast" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>GUI Resources\Sidebar\Forecast.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
